--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -21,8 +21,18 @@ jobs:
       - name: Install Protoc Go plugin
         run: go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 
+      - name: Install Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
+
+      - name: Build 🔧
+        run: |
+          npm install
+          make
 
       - name: Test
         run: |
