--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "devDependencies": {
         "@types/node": "^18.6.1",
+        "eslint": "^8.20.0",
         "glob": "^8.0.3",
         "terser": "^5.14.2",
         "vite": "^3.0.3"
