--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
         "pretty": false,
         "allowJs": true,
         "esModuleInterop": true,
-        "baseUrl": ".",
+        "baseUrl": "."
     }
 }
