--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
     "devDependencies": {
         "@protobuf-ts/plugin": "^2.0.4",
         "@protobuf-ts/runtime": "^2.0.4",
+        "@types/jest": "^28.1.6",
         "@types/node": "^18.6.1",
-        "@typescript-eslint/eslint-plugin": "^5.31.0",
+        "@typescript-eslint/eslint-plugin": "^5.32.0",
         "@typescript-eslint/parser": "^5.31.0",
         "eslint": "^8.21.0",
         "eslint-plugin-unused-imports": "^2.0.0",
         "glob": "^8.0.3",
         "http-server": "13.0.1",
+        "jest": "^28.1.3",
+        "jest-environment-jsdom": "^28.1.3",
         "sass": "^1.39.0",
         "terser": "^5.14.2",
+        "ts-jest": "^28.0.7",
         "typescript": "4.3.5",
         "typescript-formatter": "^7.2.2",
         "vite": "^3.0.3"
