--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
 jobs:
-  go-build-and-test:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
