Correct make target name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build 🔧
         run: |
-          make dist/wotlk/.dirname
+          make dist/wotlk/.dirstamp
 
       - name: Test
         run: |
